--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-multiparty": "^2.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
+    "mv": "^2.1.1",
     "random-keygen": "^1.0.4",
     "random-token": "0.0.8"
   }
