--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongoose": "^5.12.5",
+    "mongoose-partial-full-search": "0.0.6",
+    "mongoose-text-search": "0.0.2",
     "multer": "^1.4.2",
     "mv": "^2.1.1",
     "random-keygen": "^1.0.4",
