--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "fast-folder-size": "^1.2.0",
     "mongoose": "^5.12.5",
     "mongoose-partial-full-search": "0.0.6",
     "mongoose-text-search": "0.0.2",
