--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "fast-folder-size": "^1.2.0",
     "mongoose": "^5.12.5",
     "mongoose-partial-full-search": "0.0.6",
@@ -21,6 +22,8 @@
     "multer": "^1.4.2",
     "mv": "^2.1.1",
     "node-vibrant": "^3.2.1-alpha.1",
+    "passport": "^0.4.1",
+    "passport-spotify": "^2.0.0",
     "random-keygen": "^1.0.4",
     "random-token": "0.0.8"
   }
