--- a/package.json
+++ b/package.json
@@ -1,30 +1,28 @@
 {
-  "name": "stonks",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "hyperspace2.0",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "author": "purry03 <rohansh.lko@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
     "express-session": "^1.17.1",
     "fast-folder-size": "^1.2.0",
-    "mongoose": "^5.12.5",
+    "http-errors": "~1.6.3",
+    "mongoose": "^5.12.7",
     "mongoose-partial-full-search": "0.0.6",
-    "mongoose-text-search": "0.0.2",
-    "multer": "^1.4.2",
-    "mv": "^2.1.1",
+    "morgan": "~1.9.1",
     "node-vibrant": "^3.2.1-alpha.1",
     "passport": "^0.4.1",
     "passport-spotify": "^2.0.0",
-    "random-keygen": "^1.0.4",
-    "random-token": "0.0.8"
+    "recachegoose": "^8.1.0",
+    "redis-server": "^1.2.2",
+    "serve-favicon": "^2.5.0"
   }
 }
